# calclang

./: CMakeLists.txt  Compiler.c  Compiler.h  Debugger.c  Debugger.h  Equation.c  Equation.h  ExitCodes.h  Item.c  Item.h  ItemType.c  ItemType.h  ItemValue.c  ItemValue.h  ItemsStack.c  ItemsStack.h  Lex.c  Lex.h  Main.c  MathHelpers.c  MathHelpers.h  NativeVariables.c  NativeVariables.h  Operator.c  Operator.h  Runtime.c  Runtime.h  Storage.c  Storage.h  Variable.c  Variable.h  VariableName.c  VariableName.h  input.txt
